frontend/test/should_pass/index_model_004.gm
node class N
{
	s : string;
}

edge class E
{
	s : string;
}
