frontend/test/should_fail/no_transient_object_in_edge.gm
transient class TransObj
{
}

edge class E
{
	tobj:TransObj;
}
